P4ADEV-2494-wf-fine-reduction-expiration
