# src/main/java/it/gov/pagopa/pu/workflow/controller/DebtPositionFineControllerImpl.java
@@ -1,7 +1,6 @@
 package it.gov.pagopa.pu.workflow.controller;
 
 import it.gov.pagopa.pu.workflow.controller.generated.DebtPositionFineApi;
-import it.gov.pagopa.pu.workflow.dto.FineReductionExpirationRequestDTO;
 import it.gov.pagopa.pu.workflow.dto.generated.WorkflowCreatedDTO;
 import it.gov.pagopa.pu.workflow.service.debtposition.custom.fine.DebtPositionFineService;
 import lombok.extern.slf4j.Slf4j;
@@ -19,10 +18,8 @@ public class DebtPositionFineControllerImpl implements DebtPositionFineApi {
   }
 
   @Override
-  public ResponseEntity<WorkflowCreatedDTO> handleFineReductionExpiration(Long debtPositionId, FineReductionExpirationRequestDTO body, Boolean massive) {
-    log.info("Starting workflow to handle fine reduction expiration: {} and evenType: {}", debtPositionId, body.getPaymentEventRequest().getPaymentEventType());
-    return ResponseEntity.ok(
-      debtPositionFineService.handleFineReductionExpiration(debtPositionId, body.getPaymentEventRequest(), massive, body.getExecutionParams())
-    );
+  public ResponseEntity<WorkflowCreatedDTO> expireFineReduction(Long debtPositionId) {
+    log.info("Starting workflow to handle fine reduction expiration: {}", debtPositionId);
+    return ResponseEntity.ok(debtPositionFineService.expireFineReduction(debtPositionId));
   }
 }
